# offers_bot

./: .env_example  .gitignore  README.md  config.py  main.py  pyproject.toml
keyboards/: admin_inlines.py
modules/keyboards/: admin_inlines.py
modules/redis/: orders.py
